<resources>
    <string name="app_name">Kamon For Electronics</string>
    <string name="admin">Admin</string>
    <string name="scan_goods">Scan Goods</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="to_insert_new_goods">To Insert New Goods</string>
    <string name="to_scan_receipt">To Scan Receipt</string>
    <string name="welcome_to_kamon_stores">Welcome to Kamon Stores</string>
    <string name="slogn">Kamon For Electronic Devices</string>
    <string name="by_barcode">By Barcode</string>
    <string name="by_serial_number">By Serial Number</string>
    <string name="please_choose_insert_methods">Please Choose Insert Methods</string>
    <string name="receipt1">Receipt</string>
    <string name="barcode">Barcode :</string>
    <string name="date">Date :</string>
    <string name="products">Products :</string>
    <string name="quantities">Quantities :</string>
    <string name="serial_number">Serial Number :</string>
    <string name="status">Status :</string>
    <string name="please_choose_the_restore">Please Choose The Restore :</string>
    <string name="login_to_admin_page">Login to Admin Page</string>
    <string name="string_login_to_admin_page" />
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="user_name">User Name :</string>
    <string name="sales_total">Sales Total</string>
    <string name="buy_total">Buy Total</string>
    <string name="please_choose_one_of_totals">Please Choose One Of Totals</string>
    <string name="totals">Totals</string>
    <string name="manually">Manually</string>
    <string name="automatic">Automatic</string>
    <string name="please_choose_methods_to_add_new_products">Please Choose Methods To Add New Products</string>
</resources>
