<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kkk"
    tools:context="com.example.shahi.kamon.Home">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/to_scan_receipt"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/Sc_Re"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:background="@drawable/circle1"
            android:text="@string/scan_receipt"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Sc_Re"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:text="@string/to_insert_new_goods"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/Sc_Go"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/Sc_Re"
            android:layout_alignStart="@+id/Sc_Re"
            android:layout_below="@+id/Sc_Re"
            android:layout_marginTop="74dp"
            android:background="@drawable/circle1"
            android:text="@string/scan_goods"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/welcome_to_kamon_stores"
            android:textColor="#000"
            android:textSize="25sp" />

        <Button
            android:id="@+id/h_admin"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@null"
            android:text="@string/admin"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="18sp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
