<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kkk"
    tools:context="com.example.shahi.kamon.Totals">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp"
            android:text="@string/please_choose_one_of_totals"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/T1_S"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:background="@drawable/circle1"
            android:text="@string/sales_total"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_above="@+id/T1_B"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp" />

        <Button
            android:id="@+id/T1_B"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginBottom="43dp"
            android:background="@drawable/circle1"
            android:text="@string/buy_total"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/T1_S"
            android:layout_alignStart="@+id/T1_S" />

        <Button
            android:id="@+id/t1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:background="@drawable/circle2"
            android:text="@string/totals"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@null"
            android:text="Logout"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
