<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kkk"
    tools:context="com.example.shahi.kamon.Insert_Method">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0">

        <Button
            android:id="@+id/in_bar1"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginTop="124dp"
            android:background="@drawable/circle1"
            android:text="@string/by_barcode"
            android:textAllCaps="false"
            android:onClick="scan"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/in_no1"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/circle1"
            android:text="@string/by_serial_number"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_below="@+id/in_bar1"
            android:layout_alignLeft="@+id/in_bar1"
            android:layout_alignStart="@+id/in_bar1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/please_choose_insert_methods"
            android:textColor="#000"
            android:textSize="25sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
