<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kkk"
    tools:context="com.example.shahi.kamon.Add_pro_meth">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/man_bn"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginTop="74dp"
            android:background="@drawable/circle2"
            android:onClick="scan"
            android:text="@string/manually"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_below="@+id/text_pr"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/auto_b"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/man_bn"
            android:layout_alignStart="@+id/man_bn"
            android:layout_below="@+id/man_bn"
            android:layout_marginTop="60dp"
            android:background="@drawable/circle2"
            android:text="@string/automatic"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_pr"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:text="@string/please_choose_methods_to_add_new_products"
            android:textColor="#000"
            android:textSize="20sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>


