<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kkk"
    tools:context="com.example.shahi.kamon.Login.Login_admin">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_admin_page"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="31dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />



        <TextView
            android:id="@+id/user"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/user_name"
            android:layout_alignBottom="@+id/user_name"
            android:text="@string/user_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/password"
            android:layout_alignBottom="@+id/password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="14dp"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="47dp"
            android:background="@drawable/circle"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_above="@+id/password"
            android:layout_toRightOf="@+id/user"
            android:layout_toEndOf="@+id/user"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/user_name"
            android:layout_alignStart="@+id/user_name" />

        <Button
            android:id="@+id/login_admin"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/circle1"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginBottom="84dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
